--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+2019-09-01 Changes in burp-2.3.14:
+  * 823: Fix server-initiated restore without a restoreprefix causing
+         the client side's restoreprefix to be doubled.
+  * From Orsiris de Jong:
+    - Backup tool script 0.5.0 for burp
+
 2019-08-01 Changes in burp-2.3.12:
   * Fix Windows memory breakage when restoring long paths.
   * Add long directories to tests.
