--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+  * Upgrade Windows depkgs to:
+     - openssl-1.1.1d.
+     - pcre-8.43.
+
 2019-09-01 Changes in burp-2.3.14:
   * 823: Fix server-initiated restore without a restoreprefix causing
          the client side's restoreprefix to be doubled.
